--- a/xyz.html
+++ b/xyz.html
@@ -9,5 +9,6 @@
 <body>
    <h1> "Nik is well, Nik is not a well!"</h1>
     <h2> ALL IS WELL </h2>
+    <img src="https://media.giphy.com/media/3o7btNa0RUYa5E7iiQ/giphy.gif" alt="Animated GIF">
 </body>
 </html>
