--- a/xyz.html
+++ b/xyz.html
@@ -10,5 +10,54 @@
    <h1> "Nik is well, Nik is not a well!"</h1>
     <h2> ALL IS WELL </h2>
     <img src="https://media.giphy.com/media/3o7btNa0RUYa5E7iiQ/giphy.gif" alt="Animated GIF">
+    <h1>DAILY TASKS<h1>
+        <fieldset>
+    <legend>15 APRIL 2023</legend>
+
+    <div>
+      <input type="checkbox">
+      <label>Add your daily learning/blog one page to the docusaurus repo</label>
+    </div>
+
+</fieldset>
+        
+<fieldset>
+    <legend>14 APRIL 2023</legend>
+
+    <div>
+      <input type="checkbox"  checked>
+      <label>Learn how to use vs code</label>
+    </div>
+    <div>
+      <input type="checkbox"  checked>
+      <label>Learn how npm works</label>
+    </div>
+    <div>
+      <input type="checkbox"  checked>
+      <label>Learn what package.json is</label>
+    </div>
+    <div>
+      <input type="checkbox"  checked>
+      <label>Learn how to use start script from package.json</label>
+    </div>
+    <div>
+      <input type="checkbox"  checked>
+      <label>Get a docusoaurus project working locally</label>
+    </div>
+    <div>
+      <input type="checkbox"  checked>
+      <label>Make changes to the project and push them to git</label>
+    </div>
+    <div>
+      <input type="checkbox">
+      <label>Add your own page to the docusaurus project </label>
+    </div>
+
+
+</fieldset>
+
+    </div>
+        
+ 
 </body>
 </html>
