--- a/xyz.html
+++ b/xyz.html
@@ -12,6 +12,17 @@
     <h2> ALL IS WELL </h2>
     <img src="https://media.giphy.com/media/3o7btNa0RUYa5E7iiQ/giphy.gif" alt="Animated GIF">
     <h1>DAILY TASKS<h1>
+
+      <fieldset>
+        <legend>16 APRIL Sun 2023</legend>
+    
+        <div>
+          <input type="checkbox">
+          <label>Pray fajr</label>
+        </div>
+    
+    </fieldset>
+
         <fieldset>
     <legend>15 APRIL 2023</legend>
 
