--- a/xyz.html
+++ b/xyz.html
@@ -64,6 +64,18 @@
       <input type="checkbox">
       <label>Add your own page to the docusaurus project </label>
     </div>
+    <div>
+      <input type="checkbox" checked>
+      <label>learn cmd-w to close chrome tabs </label>
+    </div>
+    <div>
+      <input type="checkbox" checked>
+      <label>learn ctrl-r to switch vs code projects </label>
+    </div>
+    <div>
+      <input type="checkbox" checked>
+      <label>learn cmd-shift-f to search throught project in vs code and cmd-shift-r to replace and cmd-p to find any file </label>
+    </div>
 
 
 </fieldset>
