--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-   <h1> "Nik is well, Nik is not a well!"</h1>
+   <h1> "Nikhat is well, Nik is not a well!"</h1>
     <h2> ALL IS WELL </h2>
     <img src="https://media.giphy.com/media/3o7btNa0RUYa5E7iiQ/giphy.gif" alt="Animated GIF">
     <h1>DAILY TASKS<h1>
