--- a/xyz.html
+++ b/xyz.html
@@ -25,6 +25,16 @@
 
         <fieldset>
     <legend>15 APRIL 2023</legend>
+    
+    <div>
+      <input type="checkbox">
+      <label>Learn ayah 5 of bayyinah</label>
+    </div>
+
+    <div>
+      <input type="checkbox">
+      <label>complete PA assignments</label>
+    </div>
 
     <div>
       <input type="checkbox">
