add and check one box

--- a/xyz.html
+++ b/xyz.html
@@ -27,7 +27,7 @@
     <legend>15 APRIL 2023</legend>
     
     <div>
-      <input type="checkbox">
+      <input type="checkbox"  checked>
       <label>Learn ayah 5 of bayyinah</label>
     </div>
 
