check two more boxes

--- a/xyz.html
+++ b/xyz.html
@@ -28,12 +28,12 @@
     
     <div>
       <input type="checkbox"  checked>
-      <label>Learn ayah 5 of bayyinah</label>
+      <label>Learn ayah 8 of bayyinah</label>
     </div>
 
     <div>
-      <input type="checkbox">
-      <label>complete PA assignments</label>
+      <input type="checkbox" checked>
+      <label>complete PA assignment 1</label>
     </div>
 
     <div>
