--- a/xyz.html
+++ b/xyz.html
@@ -27,6 +27,14 @@
     <legend>15 APRIL 2023</legend>
     
     <div>
+      <input type="checkbox">
+      <label>learn how to make new branch "git branch name"
+        how to get commitHash : git log --one line
+        how to go to previous commit "git reset commitHash"
+      </label>
+    </div>
+
+    <div>
       <input type="checkbox"  checked>
       <label>Learn ayah 8 of bayyinah</label>
     </div>
