--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 
           <div>
             <input type="checkbox">
+            <label>complete dbms lab manual 3</label>
+          </div>
+
+        </fieldset>
+        <fieldset>
+          <legend>18 APRIL Tue 2023</legend>
+
+          <div>
+            <input type="checkbox">
             <label>download XAMPP</label>
           </div>
           <div>
