--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <legend>24 APRIL Tue 2023</legend>
 
           <div>
-            <input type="checkbox">
+            <input type="checkbox" checked>
             <label>complete dbms lab manual 3</label>
           </div>
 
