--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
           <div>
             <input type="checkbox" checked>
+            <label>create new insta account</label>
+          </div>
+
+          <div>
+            <input type="checkbox" checked>
             <label>complete dbms lab manual 3</label>
           </div>
 
