--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <h1>DAILY TASKS<h1>
 
         <fieldset>
+          <legend>26 APRIL Wed 2023</legend>
+
+          <div>
+            <input type="checkbox">
+            <label>drink a sip of water</label>
+          </div>
+        </fieldset>
+        
+        <fieldset>
           <legend>24 APRIL Tue 2023</legend>
 
           <div>
