--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
           <legend>26 APRIL Wed 2023</legend>
 
           <div>
-            <input type="checkbox">
+            <input type="checkbox" checked>
             <label>drink a sip of water</label>
           </div>
         </fieldset>
-        
+
         <fieldset>
           <legend>24 APRIL Tue 2023</legend>
 
