--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
           <div>
             <input type="checkbox" checked>
+            <label>"hacker rank pe hello world kiya bas"</label>
+          </div>
+
+          <div>
+            <input type="checkbox" checked>
             <label>"type from 233 to 240 , speed mostly <= 40"</label>
           </div>
 
