--- a/index.html
+++ b/index.html
@@ -1,154 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./index.css">
-  </head>
-  <body>
-    <h1> "Nik is well, Nik is not a well!"</h1>
-    <h2> ALL IS WELL </h2>
-    <img src="https://media.giphy.com/media/3o7btNa0RUYa5E7iiQ/giphy.gif"
-      alt="Animated GIF">
-    <h1>DAILY TASKS<h1>
 
-        <fieldset>
-          <legend>26 APRIL Wed 2023</legend>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./index.css">
+</head>
 
-          <div>
-            <input type="checkbox" checked>
-            <label>"hacker rank pe hello world kiya bas"</label>
-          </div>
+<body>
+  <h1> "Nik is well, Nik is not a well!"</h1>
+  <h2> ALL IS WELL </h2>
+  <img src="https://media.giphy.com/media/3o7btNa0RUYa5E7iiQ/giphy.gif" alt="Animated GIF">
+  <h1>DAILY TASKS<h1>
 
-          <div>
-            <input type="checkbox" checked>
-            <label>"type from 233 to 240 , speed mostly <= 40"</label>
-          </div>
+      <fieldset>
+        <legend>26 APRIL Wed 2023</legend>
 
-          <div>
-            <input type="checkbox" checked>
-            <label>drink a sip of water</label>
-          </div>
-        </fieldset>
+        <div>
+          <input type="checkbox">
+          <label>"insta video learn and upload"</label>
+        </div>
 
-        <fieldset>
-          <legend>24 APRIL Tue 2023</legend>
+        <div>
+          <input type="checkbox">
+          <label>"PA assgn & CG assgn use chat gpt"</label>
+        </div>
 
-          <div>
-            <input type="checkbox" checked>
-            <label>create new insta account</label>
-          </div>
+        <div>
+          <input type="checkbox">
+          <label>C++ basics start</label>
+        </div>
 
-          <div>
-            <input type="checkbox" checked>
-            <label>complete dbms lab manual 3</label>
-          </div>
+        <div><input type="checkbox"><label>PA practical from scratch</label></div>
+        <div><input type="checkbox"><label>CG print 6</label></div>
+        <div><input type="checkbox" checked><label>learn abbreviations on emmit</label></div>
 
-        </fieldset>
-        <fieldset>
-          <legend>18 APRIL Tue 2023</legend>
+        <div id="page">
+          <div class="logo"></div>
+          <ol id="navigation">
+            <li><a href="https://www.google.com">Google link</a></li>
+            <li><a href="">put rehan insta link</a></li>
+            <li><a href="">Item 3</a></li>
+            <li><a href="">Item 4</a></li>
+            <li><a href="">Item 5</a></li>
+          </ol>
+        </div>
 
-          <div>
-            <input type="checkbox">
-            <label>download XAMPP</label>
-          </div>
-          <div>
-            <input type="checkbox">
-            <label>revise tajweed of all chota surahs left</label>
-          </div>
+        <div>
+          <input type="checkbox" checked>
+          <label>"hacker rank pe hello world kiya bas"</label>
+        </div>
 
-        </fieldset>
+        <div>
+          <input type="checkbox" checked>
+          <label>"type from 233 to 240 , speed mostly <= 40"</label>
+        </div>
 
-        <fieldset>
-          <legend>16 APRIL Sun 2023</legend>
+        <div>
+          <input type="checkbox" checked>
+          <label>drink a sip of water</label>
+        </div>
+      </fieldset>
 
-          <div>
-            <input type="checkbox">
-            <label>Pray fajr</label>
-          </div>
+      <fieldset>
+        <legend>24 APRIL Tue 2023</legend>
 
-        </fieldset>
+        <div>
+          <input type="checkbox" checked>
+          <label>create new insta account</label>
+        </div>
 
-        <fieldset>
-          <legend>15 APRIL 2023</legend>
+        <div>
+          <input type="checkbox" checked>
+          <label>complete dbms lab manual 3</label>
+        </div>
 
-          <div>
-            <input type="checkbox">
-            <label>learn how to make new branch "git branch name"
-              how to get commitHash : git log --one line
-              how to go to previous commit "git reset commitHash"
-            </label>
-          </div>
+      </fieldset>
+      <fieldset>
+        <legend>18 APRIL Tue 2023</legend>
 
-          <div>
-            <input type="checkbox" checked>
-            <label>Learn ayah 8 of bayyinah</label>
-          </div>
+        <div>
+          <input type="checkbox">
+          <label>download XAMPP</label>
+        </div>
+        <div>
+          <input type="checkbox">
+          <label>revise tajweed of all chota surahs left</label>
+        </div>
 
-          <div>
-            <input type="checkbox" checked>
-            <label>complete PA assignment 1</label>
-          </div>
+      </fieldset>
 
-          <div>
-            <input type="checkbox">
-            <label>Add your daily learning/blog one page to the docusaurus repo</label>
-          </div>
+      <fieldset>
+        <legend>16 APRIL Sun 2023</legend>
 
-        </fieldset>
+        <div>
+          <input type="checkbox">
+          <label>Pray fajr</label>
+        </div>
 
-        <fieldset>
-          <legend>14 APRIL 2023</legend>
+      </fieldset>
 
-          <div>
-            <input type="checkbox" checked>
-            <label>Learn how to use vs code</label>
-          </div>
-          <div>
-            <input type="checkbox" checked>
-            <label>Learn how npm works</label>
-          </div>
-          <div>
-            <input type="checkbox" checked>
-            <label>Learn what package.json is</label>
-          </div>
-          <div>
-            <input type="checkbox" checked>
-            <label>Learn how to use start script from package.json</label>
-          </div>
-          <div>
-            <input type="checkbox" checked>
-            <label>Get a docusoaurus project working locally</label>
-          </div>
-          <div>
-            <input type="checkbox" checked>
-            <label>Make changes to the project and push them to git</label>
-          </div>
-          <div>
-            <input type="checkbox">
-            <label>Add your own page to the docusaurus project </label>
-          </div>
-          <div>
-            <input type="checkbox" checked>
-            <label>learn cmd-w to close chrome tabs </label>
-          </div>
-          <div>
-            <input type="checkbox" checked>
-            <label>learn ctrl-r to switch vs code projects </label>
-          </div>
-          <div>
-            <input type="checkbox" checked>
-            <label>learn cmd-shift-f to search throught project in vs code and
-              cmd-shift-r to replace and cmd-p to find any file </label>
-          </div>
+      <fieldset>
+        <legend>15 APRIL 2023</legend>
+
+        <div>
+          <input type="checkbox">
+          <label>learn how to make new branch "git branch name"
+            how to get commitHash : git log --one line
+            how to go to previous commit "git reset commitHash"
+          </label>
+        </div>
+
+        <div>
+          <input type="checkbox" checked>
+          <label>Learn ayah 8 of bayyinah</label>
+        </div>
+
+        <div>
+          <input type="checkbox" checked>
+          <label>complete PA assignment 1</label>
+        </div>
+
+        <div>
+          <input type="checkbox">
+          <label>Add your daily learning/blog one page to the docusaurus repo</label>
+        </div>
+
+      </fieldset>
+
+      <fieldset>
+        <legend>14 APRIL 2023</legend>
+
+        <div>
+          <input type="checkbox" checked>
+          <label>Learn how to use vs code</label>
+        </div>
+        <div>
+          <input type="checkbox" checked>
+          <label>Learn how npm works</label>
+        </div>
+        <div>
+          <input type="checkbox" checked>
+          <label>Learn what package.json is</label>
+        </div>
+        <div>
+          <input type="checkbox" checked>
+          <label>Learn how to use start script from package.json</label>
+        </div>
+        <div>
+          <input type="checkbox" checked>
+          <label>Get a docusoaurus project working locally</label>
+        </div>
+        <div>
+          <input type="checkbox" checked>
+          <label>Make changes to the project and push them to git</label>
+        </div>
+        <div>
+          <input type="checkbox">
+          <label>Add your own page to the docusaurus project </label>
+        </div>
+        <div>
+          <input type="checkbox" checked>
+          <label>learn cmd-w to close chrome tabs </label>
+        </div>
+        <div>
+          <input type="checkbox" checked>
+          <label>learn ctrl-r to switch vs code projects </label>
+        </div>
+        <div>
+          <input type="checkbox" checked>
+          <label>learn cmd-shift-f to search throught project in vs code and
+            cmd-shift-r to replace and cmd-p to find any file </label>
+        </div>
 
 
-        </fieldset>
+      </fieldset>
 
       </div>
 
 
-    </body>
-  </html>
+</body>
+
+</html>
