--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
   <img src="https://media.giphy.com/media/3o7btNa0RUYa5E7iiQ/giphy.gif" alt="Animated GIF">
   <h1>DAILY TASKS<h1>
 
+    <fieldset>
+      <legend>2 May Tue 2023</legend>
+
+      <div>
+        <input type="checkbox" checked>
+        <label>dbms 2 presentations make & prepare</label>
+      </div>
+
+    </fieldset>
+
       <fieldset>
         <legend>26 APRIL Wed 2023</legend>
 
