--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <legend>2 May Tue 2023</legend>
 
       <div>
-        <input type="checkbox" checked>
+        <input type="checkbox" >
         <label>dbms 2 presentations make & prepare</label>
       </div>
 
