--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         <label>dbms 2 presentations make & prepare</label>
       </div>
 
+      <div>
+        <input type="checkbox">
+        <label>pbl project</label>
+      </div>
+
+
     </fieldset>
 
       <fieldset>
