--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 
       <div>
         <input type="checkbox">
-        <label>pbl project</label>
+        <label>pbl project presentation prepare</label>
+      </div>
+
+      <div>
+        <input type="checkbox">
+        <label>pbl project report</label>
       </div>
 
 
