--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
       <legend>2 May Tue 2023</legend>
 
       <div>
+        <input type="checkbox" checked >
+        <label>audit course print</label>
+      </div>
+
+      <div>
+        <input type="checkbox" checked >
+        <label>CG 6 print</label>
+      </div>
+
+      <div>
         <input type="checkbox" >
         <label>dbms 2 presentations make & prepare</label>
       </div>
