--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
   <h1>DAILY TASKS<h1>
 
     <fieldset>
+      <legend>10 May Tue 2023</legend>
+
+      <div>
+        <input type="checkbox"  >
+        <label>dbms report</label>
+      </div>
+
+
+    </fieldset>
+    <fieldset>
       <legend>2 May Tue 2023</legend>
 
       <div>
