--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
   <img src="https://media.giphy.com/media/3o7btNa0RUYa5E7iiQ/giphy.gif" alt="Animated GIF">
   <h1>DAILY TASKS<h1>
 
+  <fieldset>
+    <legend>11 May 2023</legend>
+    <div>
+      <input type="checkbox" checked>
+      <label>learn dslr basics</label>
+    </div>
+  </fieldset>
+   
     <fieldset>
       <legend>10 May Tue 2023</legend>
 
