--- a/index.html
+++ b/index.html
@@ -16,16 +16,61 @@
   <h1>DAILY TASKS<h1>
 
   <fieldset>
+        <legend>14 May Sun 2023</legend>
+
+        <div>
+          <input type="checkbox" >
+          <label>PA lab manual complete</label>
+        </div>
+
+        <div>
+          <input type="checkbox" >
+          <label>CG 3,4,5,6 assignments</label>
+        </div>
+
+        <div>
+          <input type="checkbox" >
+          <label>SE 3,4,5,6 assignments</label>
+        </div>
+
+        <div>
+          <input type="checkbox" >
+          <label>Math 5th assignment</label>
+        </div>
+
+        <div>
+          <input type="checkbox" >
+          <label>CG lab manual</label>
+        </div>
+
+        <div>
+          <input type="checkbox" >
+          <label>DBMS lab manual</label>
+        </div>
+
+        <div>
+          <input type="checkbox" >
+          <label>DBMS assignments</label>
+        </div>
+
+
+      </fieldset>
+
+  <fieldset>
     <legend>11 May 2023</legend>
     <div>
       <input type="checkbox" checked>
-      <label>learn dslr basics</label>
+      <label>get cg overview</label>
     </div>
   </fieldset>
    
     <fieldset>
       <legend>10 May Tue 2023</legend>
 
+      <div>
+        <input type="checkbox" checked>
+        <label>learn dslr basics</label>
+      </div>
       <div>
         <input type="checkbox"  >
         <label>dbms report</label>
