--- a/index.html
+++ b/index.html
@@ -14,6 +14,62 @@
   <h2> ALL IS WELL </h2>
   <img src="https://media.giphy.com/media/3o7btNa0RUYa5E7iiQ/giphy.gif" alt="Animated GIF">
   <h1>DAILY TASKS<h1>
+    
+    <fieldset>
+      <legend>21 May 2023</legend>
+      <div>
+        <input type="checkbox" checked>
+        <label>learn layering i.e. bring both videos on single page n then layer, in canva</label>
+      </div>
+
+      <legend>21 May 2023</legend>
+      <div>
+        <input type="checkbox" checked>
+        <label>learn drag video and put aage piche, in canva</label>
+      </div>
+
+      <legend>21 May 2023</legend>
+      <div>
+        <input type="checkbox" checked>
+        <label>learn arranging size, in canva</label>
+      </div>
+
+      <legend>21 May 2023</legend>
+      <div>
+        <input type="checkbox" checked>
+        <label>learn how to show timeline in canva</label>
+      </div>
+
+      <legend>21 May 2023</legend>
+      <div>
+        <input type="checkbox" checked>
+        <label>learn locking size in arranging in canva</label>
+      </div>
+
+      <legend>21 May 2023</legend>
+      <div>
+        <input type="checkbox" checked>
+        <label>learn exporting in canva</label>
+      </div>
+
+      <legend>21 May 2023</legend>
+      <div>
+        <input type="checkbox" checked>
+        <label>learn looking at preview in canva</label>
+      </div>
+    </fieldset>
+
+    <legend>21 May 2023</legend>
+    <div>
+      <input type="checkbox" checked>
+      <label>put hair oil</label>
+    </div>
+
+    <legend>21 May 2023</legend>
+    <div>
+      <input type="checkbox">
+      <label>bath</label>
+    </div>
 
   <fieldset>
         <legend>14 May Sun 2023</legend>
@@ -24,7 +80,7 @@
         </div>
 
         <div>
-          <input type="checkbox" >
+          <input type="checkbox" checked>
           <label>CG 3,4,5,6 assignments</label>
         </div>
 
@@ -44,7 +100,7 @@
         </div>
 
         <div>
-          <input type="checkbox" >
+          <input type="checkbox" checked>
           <label>DBMS lab manual</label>
         </div>
 
